@@ -4,6 +4,8 @@
 - Plugins can now register additional skins.
 - kreXX debug calls will return the original analysis value.
 - Leading and trailing spaces are now better visible in the output.
+- The bracktrace action accepts now an already existing one. Great
+  for debugging error objects.
 - Change: Deprecated the AbstractProcess class.
 - Change: Deprecated the Krexx main class. The "new" one resides
   now inside the src folder.
